Fix form error position on mobile layout

--- a/scss/mediaqry.scss
+++ b/scss/mediaqry.scss
@@ -78,6 +78,11 @@
     margin: 0 0 0 -10.25rem;
     z-index: 3;
   }
+
+  .content__form-error {
+    bottom: 0.25rem;
+    top: auto;
+  }
 }
 
 // Desktop Styles
