--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -113,6 +113,7 @@ body {
 .content__form-btn {
   width: 100%;
   padding: 1rem 2rem;
+  margin: 1rem 0 0 0;
   border: 0;
   border-radius: 28px;
   background: var.$clr-green;
@@ -129,7 +130,7 @@ body {
 
 .content__form-error {
   position: absolute;
-  bottom: 0.25rem;
+  top: 3.25rem;
   left: 0;
   color: var.$clr-red;
   font-size: 0.75em;
