--- a/site_dir/main.css
+++ b/site_dir/main.css
@@ -175,6 +175,7 @@ body {
 .content__form-btn {
   width: 100%;
   padding: 1rem 2rem;
+  margin: 1rem 0 0 0;
   border: 0;
   border-radius: 28px;
   background: #54e6af;
@@ -190,7 +191,7 @@ body {
 
 .content__form-error {
   position: absolute;
-  bottom: 0.25rem;
+  top: 3.25rem;
   left: 0;
   color: #fb3e3e;
   font-size: 0.75em;
@@ -274,6 +275,11 @@ body {
     padding: 1rem 1.5rem;
     margin: 0 0 0 -10.25rem;
     z-index: 3;
+  }
+
+  .content__form-error {
+    bottom: 0.25rem;
+    top: auto;
   }
 }
 @media screen and (min-width: 1100px) {
